used someones code to rectify the issue of dom object being too big to practically check if in viewport

--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -32,6 +32,7 @@ p {
   font-size: 18;
 }
 
-.red-active {
-  color: $logo_red;
+.red {
+  color: $logo_red !important;
+  font-size: 100px;
 }
